<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/matchDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/homeTeamTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/HOME_TEAM"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/awayTeamTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AWAY_TEAM"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/homeGoalsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home_goals"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/awayGoalsTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/away_goals"
                android:textAlignment="center"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/matchStatusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_status" />

        <TextView
            android:id="@+id/matchDateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_date" />

    </LinearLayout>

</android.support.v7.widget.CardView>